<resources>
    <string name="app_name">Set Pins - 2 Players</string>

    <string name="btn_classic">Classic Mode</string>
    <string name="btn_time">Time Mode</string>
    <string name="two_players">2 Players</string>
    <string name="rate_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="best_score">Best Score</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="play_again">Play Again</string>
    <string name="btn_level_list">Level List</string>

    <string name="try_again">Try Again</string>
    <string name="next_level">Next Level</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="btn_best_score">Best Score</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="home">Home</string>

    <string name="you_win">You Win</string>
    <string name="you_lose">You Lose</string>
    <string name="time_up">Time Up</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_msg">Quit the Game ?</string>
    <string name="share_msg">"Share an app for you."</string>
</resources>
