<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/activity_home_bg"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="100dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="60dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="28sp"/>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_classic"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_classic"/>

    </LinearLayout>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_time"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_time"/>
    </LinearLayout>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_two_players"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_players"/>
    </LinearLayout>

    <LinearLayout
        style="@style/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/rate_app"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rate_app"
            android:src="@drawable/ic_rate"/>

        <ImageButton
            android:id="@+id/share"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"/>

        <ImageButton
            android:id="@+id/best_score"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/best_score"
            android:src="@drawable/ic_best"/>

        <ImageButton
            android:id="@+id/settings"
            style="@style/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"/>

    </LinearLayout>


</LinearLayout>
